# hoyo-code

./: .editorconfig  .pre-commit-config.yaml  LAST_RUN  LICENSE  README.md  README_id.md  main.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  scraper.yml  testing.yml  update.yml
genshin/: active.json  active.txt  all.json  all.txt  expired.json  expired.txt
genshin impact/: active.json  active.txt  all.json  all.txt
honkai/: active.json  active.txt  all.json  all.txt  expired.json  expired.txt
honkai starrail/: expired.txt
starrail/: active.json  active.txt  all.json  all.txt  expired.json  expired.txt
utils/: genshin.py  genshin_scraper.py  honkai.py  honkai_scraper.py  models.py  scraper_base.py  starrail.py  starrail_scraper.py
