[project]
name = "hoyo-code"
version = "0.4.0"
description = "Simple & Fast Hoyoverse Scraper"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "requests>=2.31.0",
    "pydantic>=2.6.0",
    "rich>=13.7.0",
    "ruff>=0.15.0",
    "pre-commit>=4.5.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear
    "UP",  # pyupgrade (modernize syntax)
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
